Fix label pre-wrap

--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -107,6 +107,7 @@ html {
     background: $white;
     transform: translate(2.5rem, -50%);
     padding: 0 1rem 0 0;
+    white-space: nowrap;
 
     label {
       &::before {
